Try to force builds other than Py27+vc9

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -21,7 +21,7 @@ build:
 requirements:
   build:
     # Add python for feature activation
-    - python {{ environ['PY_VER'] + '*' }}  # [win]
+    - python  # [win]
     - cmake  # [win]
     - autoconf  # [unix]
 
