Fix meta.yaml again to force other vc builds

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -22,8 +22,15 @@ requirements:
   build:
     # Add python for feature activation
     - python  # [win]
+    - vc 9  # [win and py27]
+    - vc 10  # [win and py34]
+    - vc 14  # [win and py35]
     - cmake  # [win]
     - autoconf  # [unix]
+  run:
+    - vc 9  # [win and py27]
+    - vc 10  # [win and py34]
+    - vc 14  # [win and py35]
 
 test:
   requires:
