--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,6 +1,6 @@
 {% set name = "SDL2" %}
-{% set version = "2.0.4" %}
-{% set sha256 = "da55e540bf6331824153805d58b590a29c39d2d506c6d02fa409aedeab21174b" %}
+{% set version = "2.0.5" %}
+{% set sha256 = "442038cf55965969f2ff06d976031813de643af9c9edc9e331bd761c242e8785" %}
 
 package:
   name: {{ name|lower }}
@@ -12,7 +12,8 @@ source:
   sha256: {{ sha256 }}
 
 build:
-  number: 1
+  skip: True  # [win and py36]
+  number: 0
   features:
     - vc9  # [win and py27]
     - vc10  # [win and py34]
@@ -22,15 +23,8 @@ requirements:
   build:
     # Add python for feature activation
     - python  # [win]
-    - vc 9  # [win and py27]
-    - vc 10  # [win and py34]
-    - vc 14  # [win and py35]
     - cmake  # [win]
     - autoconf  # [unix]
-  run:
-    - vc 9  # [win and py27]
-    - vc 10  # [win and py34]
-    - vc 14  # [win and py35]
 
 test:
   requires:
