Add the required packages to link to libgl
Possibly fixes https://github.com/conda-forge/sdl2-feedstock/issues/13.

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -20,9 +20,15 @@ requirements:
     - autoconf  # [not win]
     - {{ compiler('c') }}
     - {{ compiler('cxx') }}
+    - {{ cdt('mesa-libgl-devel') }}  # [linux]
+    - {{ cdt('mesa-dri-drivers') }}  # [linux]
+    - {{ cdt('libselinux') }}  # [linux]
+    - {{ cdt('libxdamage') }}  # [linux]
+    - {{ cdt('libxxf86vm') }}  # [linux]
   host:
     - xorg-libx11  # [linux]
     - xorg-libxext  # [linux]
+    - xorg-libxfixes  # [linux]
   run:
     - xorg-libx11  # [linux]
     - xorg-libxext  # [linux]
