--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -25,6 +25,8 @@ requirements:
     - {{ cdt('libselinux') }}  # [linux]
     - {{ cdt('libxdamage') }}  # [linux]
     - {{ cdt('libxxf86vm') }}  # [linux]
+    - xorg-libx11  # [linux]
+    - xorg-libxext  # [linux]
   host:
     - xorg-libx11  # [linux]
     - xorg-libxext  # [linux]
