--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -12,7 +12,7 @@ source:
     - msvc9_empty_array.patch  # [win and c_compiler == 'vs2008']
 
 build:
-  number: 1
+  number: 2
 
 requirements:
   build:
@@ -54,3 +54,4 @@ about:
 extra:
   recipe-maintainers:
     - dschreij
+    - matham
