--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -48,7 +48,7 @@ test:
 about:
   home: https://www.libsdl.org/index.php
   license: Zlib
-  license_file: COPYING.txt
+  license_file: LICENSE.txt
   summary: Low-level access to audio, keyboard, mouse, joystick, and graphics
   description: |
     Simple DirectMedia Layer is a cross-platform development library designed to
