--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -1,4 +1,7 @@
 c_compiler_version:     # [osx]
-  - 18                  # [osx]
+  - 19                  # [osx]
 cxx_compiler_version:   # [osx]
-  - 18                  # [osx]
+  - 19                  # [osx]
+
+channel_sources:                            # [osx]
+  - conda-forge/label/llvm_rc,conda-forge   # [osx]
